UPD: Background layer

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,5 +1,7 @@
 @import "fonts"
 
+$backgroundColor: #f8ff13
+
 *
   margin: 0
   padding: 0
@@ -12,3 +14,9 @@ h1, h2, h3, h4, span, a
 
 ul, ol
   list-style: none
+
+body
+  position: relative
+  overflow: hidden
+  width: 100vw
+  height: 100vh
