--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,10 +2,13 @@
 
 $backgroundColor: #f8ff13;
 
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 h1, h2, h3, h4, span, a {
-
   font-family: $pariMatch;
   text-decoration: none;
 }
@@ -14,11 +17,17 @@ ul, ol {
   list-style: none;
 }
 
-body{
-  padding: 0;
+body {
   box-sizing: border-box;
   position: relative;
   overflow: hidden;
   width: 100vw;
   height: 100vh;
+}
+
+img {
+  width: auto;
+  max-width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
