--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -373,7 +373,7 @@ $footerColor: #000;
 }
 
 .steps {
-  margin-top: 10vh;
+  margin-top: 30px;
 
   .steps-wrap {
     display: flex;
@@ -570,6 +570,10 @@ footer {
   max-width: 1000px;
   width: 100%;
   margin: 0 auto;
+}
+
+.footer-responsive  {
+  display: none;
 }
 
 
